[package]
name = "parse-display-derive"
version = "0.9.0"
authors = ["frozenlib"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/frozenlib/parse-display"
documentation = "https://docs.rs/parse-display/"
keywords = ["derive", "enum", "from_str", "display", "regex"]
categories = ["parsing"]
description = "Procedural macro to implement Display and FromStr using common settings."
edition = "2021"
rust-version = "1.70.0"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.48", features = ["visit"] }
quote = "1.0.35"
proc-macro2 = "1.0.78"
regex = "1.10.3"
regex-syntax = "0.8.2"
structmeta = "0.3.0"
