[package]
name = "parse-display-derive"
version = "0.10.0"
authors = ["frozenlib"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/frozenlib/parse-display"
documentation = "https://docs.rs/parse-display/"
keywords = ["derive", "enum", "from_str", "display", "regex"]
categories = ["parsing"]
description = "Procedural macro to implement Display and FromStr using common settings."
edition = "2024"
rust-version = "1.85.0"

[lib]
proc-macro = true

[features]
default = []
std = []


[dependencies]
syn = { version = "2.0.117", features = ["visit"] }
quote = "1.0.45"
proc-macro2 = "1.0.106"
regex = { workspace = true }
regex-syntax = { workspace = true }
structmeta = "0.3.0"
