[package]
name = "parse-display"
version = "0.8.2"
authors = ["frozenlib"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/frozenlib/parse-display"
documentation = "https://docs.rs/parse-display/"
keywords = ["derive", "enum", "from_str", "display", "regex"]
categories = ["parsing"]
description = "Procedural macro to implement Display and FromStr using common settings."
edition = "2021"
include = ["/src/**"]

[dependencies]
parse-display-derive = { version = "=0.8.2", path = "../parse-display-derive" }
regex = { version = "1.10.3", optional = true }
regex-syntax = { version = "0.8.2", optional = true }

[dev-dependencies]
trybuild = "1.0.89"

[features]
default = ["std"]
std = ["regex", "regex-syntax"]
docs = []

[package.metadata.docs.rs]
features = ["docs"]
