[package]
name = "parse-display"
version = "0.10.0"
edition = "2024"
authors = ["frozenlib"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/frozenlib/parse-display"
documentation = "https://docs.rs/parse-display/"
keywords = ["derive", "enum", "from_str", "display", "regex"]
categories = ["parsing"]
description = "Procedural macro to implement Display and FromStr using common settings."
rust-version = "1.85.0"

[features]
default = ["std"]
std = ["regex", "regex-syntax", "parse-display-derive/std"]
docs = []

[dependencies]
parse-display-derive = { version = "=0.10.0", path = "../parse-display-derive" }
regex = { workspace = true, optional = true }
regex-syntax = { workspace = true, optional = true }

[dev-dependencies]
trybuild = "1.0.99"

[package.metadata.docs.rs]
features = ["docs"]
