[package]
name = "no_default_std"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.parse-display]
features = ["std"]
path = "../../../parse-display"
default-features = false

# Use a separate workspace to prevent `default-features` from being activated by another package.
[workspace]
